<resources>
    <string name="app_name">assignment3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="subtract">Subtract</string>
    <string name="add">Add</string>
    <string name="result">Result:</string>
    <string name="enter_number_2">Enter number 2</string>
    <string name="enter_number_1">Enter number 1</string>
    <string name="mvp">MVP</string>
    <string name="mvvm">MVVM</string>
</resources>